--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Usuarios</title>
 </head>
 <body>
-    <h1>home - node + express</h1>
+    <h1>Usuarios</h1>
 
     <a href="/usuarios/30">Ver usuario 30</a>
-    <a href="/usuarios/30">Ver usuario 496</a>
-    <a href="/cadastrar">Cadastrar</a>
 </body>
 </html>
